deploy/logs/relay.log
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/daemons/daemon_relay.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/daemons/daemon_relay.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/daemons/daemon_relay.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/daemons/daemon_relay.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/daemons/daemon_relay.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
